<resources>
    <string name="app_name">Aplicación para bases vectoriales</string>
    <string name="textview_opciones">Elige una opción:</string>
    <string name="button_determinarbase">Determinar una base</string>
    <string name="button_cambiodebase">Cambio de base</string>
    <string name="button_baseortonormal">Base ortonormal</string>
    <string name="button_arearectangulo">Area Rectangulo</string>
    <string name="textview_ortonormal">Base ortonormal</string>
    <string name="textview_componentes">¿Cuantos vectores son?</string>
    <string name="textview_tamano">¿Que dimension tienen los vectores?</string>
    <string name="edittext_numerodecomponentes">1 a 4</string>
    <string name="edittext_tamanovectores">1 a 4</string>
    <string name="textview_v1">v1</string>
    <string name="textview_v2">v2</string>
    <string name="textview_v3">v3</string>
    <string name="textview_v4">v4</string>
    <string name="button_resultado">Resultado</string>
    <string name="button_procedimiento">Procedimiento</string>
    <string name="plaintext">decimales,enteros y fracciones</string>
    <string name="edittext_ayuda"></string>
    <string name="edittext_ayuda1"></string>
    <string name="edittext_ayuda2"></string>
    <string name="edittext_ayuda3"></string>
    <string name="edittext_ayuda4"></string>
    <string name="textview_tituloRectangulo">Area de Rectangulo</string>
    <string name="textview_lado1">Lado 1</string>
    <string name="edittext_lado1">0</string>
    <string name="textview_lado2">Lado 2</string>
    <string name="edittext_lado2">0</string>
    <string name="button_calculararea">Calcular Area</string>
    <string name="textview_resultado">Resultado</string>
    <string name="textview9">TextView</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="textview">TextView</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="title_activity_base_ortonormal_proced">ActivityBaseOrtonormalProced</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="textview_vectores_entrada">Numero de vectores</string>
    <string name="textview_tam_vectores_entrada">Tamaño de vectores</string>
    <string name="textview_normalizamos_vector1">Normalizamos el vector</string>
    <string name="textview_formula_u1">u = 1/|v| * v</string>
    <string name="textview_obtenemos1">obtenemos</string>
    <string name="textview_resultado_producto_punto1">Resultado de producto punto</string>
    <string name="textview_ortogonalizamos_v1">Ortogonalizamos v</string>
    <string name="textview_respecto_u1">Respecto a u</string>
    <string name="textview_obtenemos2">Obtenemos</string>
    <string name="textview_normalizamos_vector2">Normalizamos el vector</string>
    <string name="textview_formula_u2">u = 1/|v| * v</string>
    <string name="textview_obtenemos3">Obtenemos</string>
    <string name="textview_resultado_producto_punto2">Resultado de producto punto</string>
    <string name="textview_ortogonalizamos_v2">Ortogonalizamos v</string>
    <string name="textview_respecto_u2">Respecto a u</string>
    <string name="textview_obtenemos4">Obtenemos</string>
    <string name="textview_resultado_producto_punto3">Resultado de producto punto</string>
    <string name="textview_ortogonalizamos_v3">Ortogonalizamos v</string>
    <string name="textview_respecto_u3">Respecto a u</string>
    <string name="textview_obtenemos5">Obtenemos</string>
    <string name="textview_normalizamos_vector3">Normalizamos el vector</string>
    <string name="textview_formula_u3">u = 1/|v| * v</string>
    <string name="textview_obtenemos6">Obtenemos</string>
    <string name="textview_base_ortonormal_r">Base ortonormal en R</string>
    <string name="textview_vector">Vector</string>
    <string name="edittext_v_dato1">0</string>
    <string name="edittext_v_dato2">0</string>
    <string name="edittext_v_dato3">0</string>
    <string name="edittext_v_dato4">0</string>
    <string name="todo9">TODO</string>
    <string name="todo8">TODO</string>
    <string name="textview_base1">Base1</string>
    <string name="edittext_b1_dato1">0</string>
    <string name="edittext_b1_dato2">0</string>
    <string name="edittext_b1_dato3">0</string>
    <string name="edittext_b1_dato4">0</string>
    <string name="edittext_b1_dato5">0</string>
    <string name="edittext_b1_dato6">0</string>
    <string name="edittext_b1_dato7">0</string>
    <string name="edittext_b1_dato8">0</string>
    <string name="edittext_b1_dato9">0</string>
    <string name="edittext_b1_dato10">0</string>
    <string name="edittext_b1_dato11">0</string>
    <string name="edittext_b1_dato12">0</string>
    <string name="textview_base2">Base2</string>
    <string name="edittext_b2_dato1">0</string>
    <string name="edittext_b2_dato2">0</string>
    <string name="edittext_b2_dato3">0</string>
    <string name="edittext_b2_dato4">0</string>
    <string name="edittext_b2_dato5">0</string>
    <string name="edittext_b2_dato6">0</string>
    <string name="edittext_b2_dato7">0</string>
    <string name="edittext_b2_dato8">0</string>
    <string name="edittext_b2_dato9">0</string>
    <string name="edittext_b2_dato10">0</string>
    <string name="edittext_b2_dato11">0</string>
    <string name="edittext_b2_dato12">0</string>
    <string name="textview_pregunta">¿En que base se encuentra el vector?</string>
    <string name="edittext_respuesta">C,B1,B2</string>
    <string name="button_Resultado">Resultado</string>
    <string name="textview_Resultado2">resultado</string>
    <string name="button_Procedimiento">Procedimiento</string>
    <string name="textview_Procedimiento2">procedimiento</string>
    <string name="button_select_num_vec">Empezar</string>
    <string name="msj_numero_vectores_err">El numero de vectores permitidos es de 2 a 4</string>
    <string name="msj_tamano_vectores_err">El tamaño de vectores permitidos es de 1 a 4</string>
</resources>