<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.Tecnm_chihuahua2.algebra_espacios_vectoriales.console.ActividadPrincipal">

    <TextView
        android:id="@+id/textView_opciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/textview_opciones"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_determinarbase"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#A8C8CC"
        android:padding="20dp"
        android:text="@string/button_determinarbase"
        android:textColor="#1F285C" />

    <Button
        android:id="@+id/button_cambiodebase"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#A8C8CC"
        android:padding="20dp"
        android:text="@string/button_cambiodebase"
        android:textColor="#1F285C" />

    <Button
        android:id="@+id/button_baseortonormal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#A8C8CC"
        android:padding="20dp"
        android:text="@string/button_baseortonormal"
        android:textColor="#1F285C" />


</LinearLayout>